--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ header {
 
 header h1 {
     text-align: center;
+    color: #00252E;
+    font-family: Poppins;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
 }
 
 header p {
@@ -54,6 +59,8 @@ header p {
 
 .logo {
     margin: 3rem 0 0 3rem;
+    width: 240px;
+    height: 38px;
 }
 
 img {
@@ -70,7 +77,8 @@ img {
     border: 1px solid var(--pink);
     margin: 3rem 3rem 0 0;
     border-radius: 50px;
-    width: 100px;
+    width: 400px;
+    height: 80px;
 }
 
 .btn-start {
