--- a/style.css
+++ b/style.css
@@ -77,8 +77,8 @@ img {
     border: 1px solid var(--pink);
     margin: 3rem 3rem 0 0;
     border-radius: 50px;
-    width: 400px;
-    height: 80px;
+    width: 136px;
+    height: 40px;
 }
 
 .btn-start {
@@ -87,10 +87,10 @@ img {
     background-color: var(--pink);
     color: var(--very-pale-blue);
     cursor: pointer;
-    font-size: 16px;
-    width: 405px;
-    height: 78px;
-    margin-top: 50px;
+    font-size: 20px;
+    margin-top: 50px; 
+    width: 400px;
+    height: 80px;
 }
 
 .row {
@@ -111,6 +111,8 @@ img {
 
 .growth h2 {
     margin-left: 4em;  
+    font-size: 40px;
+    font-style: normal;
     font-weight: 700;
     font-family: 'Poppins' sans-serif;
 }
@@ -120,6 +122,11 @@ img {
     line-height: 25px;
     font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    color: #00252E;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 24px;
+    width: 520px;
 }
 
 .flex::before {
@@ -154,15 +161,21 @@ img {
 }
 
 .conversation h2 {
+    font-family: Poppins;
+    font-size: 40px;
+    font-style: normal;
     font-weight: 700;
-    font-family: 'Poppins' sans-serif;
     margin: 0 0 0 7rem;
 }
 
 .conversation p {
-    font-family: 'Open Sans', sans-serif;
     font-weight: 400;
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 24px;
     margin: 2rem 0 0 7rem;
+    width: 520px;
 }
 
 
@@ -177,13 +190,19 @@ img {
 
 .users h2 {
     font-family: 'Poppins', sans-serif;
+    font-size: 40px;
+    font-style: normal;
     font-weight: 700;
     margin: 0 0 0 9rem;
 }
 
 .users p {
-    font-family: 'Open Sans', sans-serif;
+    width: 520px;
     font-weight: 400;
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    line-height: 24px;
     margin: 2rem 0 0 9rem;
 }
 
@@ -227,6 +246,10 @@ img {
 }
 
 .community h2 {
+    font-family: Poppins;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
     margin-top: 4rem;
 }
 
@@ -259,20 +282,32 @@ footer::before {
 footer h3 {
     color: var(--very-pale-blue);
     margin: 1rem 0 0 3rem;
+    font-size: 24px;
+    font-family: 'Open Sans';
+    font-weight: 700;
 }
 
 footer p {
     color: var(--very-pale-blue);
     margin: 1rem 0 0 3rem;
-    line-height: 23px;
+    font-family: Open Sans;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 24px;
+    width: 340px;
 }
 
 .phone-icon {
     margin: 0 0.4rem;
+    width: 24px;
+    height: 24px;
 }
 
 .email-icon {
     margin: 0 0.4rem;
+    width: 24px;
+    height: 24px;
 }
 
 .logo_white {
@@ -288,8 +323,8 @@ i {
 footer input{
     border: none;
     border-radius: 5px;
-    width: 325px;
-    height: 51px;
+    width: 320px;
+    height: 48px;
     margin: 3rem 0 0 50px;
 }
 
@@ -298,7 +333,11 @@ footer input{
     border: none;
     background-color: var(--pink);
     color: var(--very-pale-blue);
-    width: 164px;
+    font-family: Open Sans;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 700;
+    width: 160px;
     height: 48px;
     margin-left: 1rem;
 }
