--- a/style.css
+++ b/style.css
@@ -493,6 +493,9 @@ footer input{
         width: 320px;
         height: 48px;
         margin-top: 1rem;
+        position: relative;
+        right: 1.5rem;
+        margin-top: 1rem;
     }
 
     .btn-footer {
